--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "firebase": "^11.9.1",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
+    "motion": "^12.23.12",
+    "motion-utils": "^12.23.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
