--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.14.1",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.475.0",
     "motion": "^12.23.12",
     "motion-utils": "^12.23.0",
