--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "motion": "^12.23.12",
     "motion-utils": "^12.23.0",
     "next": "15.3.3",
+    "ogl": "^0.0.113",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -66,5 +67,12 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "description": "This is a NextJS starter in Firebase Studio.",
+  "main": "index.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "author": "",
+  "license": "ISC"
 }
