--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "motion": "^12.23.12",
     "motion-utils": "^12.23.0",
     "next": "15.3.3",
+    "ogl": "^1.0.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
